CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#PROJECT(WhiteStripe)
#SET( PROJECT_VERSION_MAJOR 1)
#SET( PROJECT_VERSION_MINOR 0)
#SET( PROJECT_VERSION_PATCH 0)
#SET( PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")

IF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive -std=c++11 -Wno-deprecated")
ENDIF() 
FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
message("OPENMP FOUND")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
CMAKE_POLICY(SET CMP0003 NEW)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(ITK REQUIRED)
INCLUDE("${ITK_USE_FILE}")
include_directories(${OpenCV_INCLUDE_DIRS})
SET(WhiteStripeSrcs src/main.cpp
	src/whiteStripe.cpp
  src/KernelFit.cpp)
SET(WhiteStripeHeaders
  src/testWhiteStripe.h
	src/whiteStripe.h
	src/KernelFit.h)

ADD_EXECUTABLE(WhiteStripe ${WhiteStripeSrcs} ${WhiteStripeHeaders})
INSTALL( TARGETS WhiteStripe 
  DESTINATION bin  
  CONFIGURATIONS "${CMAKE_CONFIGURATION_TYPES}"
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)
TARGET_LINK_LIBRARIES(WhiteStripe ${OpenCV_LIBS} ${ITK_LIBRARIES})
#INCLUDE(CTest)
#ENABLE_TESTING()
#ADD_TEST( NAME Quantile COMMAND WhiteStripe -test Quantile)
#ADD_TEST( NAME ImgMean COMMAND WhiteStripe -test ImgMean)
#ADD_TEST( NAME WhiteStripe COMMAND WhiteStripe -test WhiteStripe)

SET( BUILD_WHITESTRIPE_GUI ON CACHE BOOL "Do you want to build GUI?" )
IF( BUILD_WHITESTRIPE_GUI )
  FIND_PACKAGE(Qt4 REQUIRED)
  INCLUDE( ${QT_USE_FILE} )
  SET(WhiteStripeGUISrc src/whiteStripeGUI.cpp
	  src/whiteStripe.cpp
	  src/KernelFit.cpp
	  )
  SET(WhiteStripeGUIIncludes 
	  src/whiteStripe.h
	  src/KernelFit.h
	  src/utils.h
	  src/whiteStripeGUI.h)
  QT4_WRAP_CPP(MOCSrcs src/whiteStripeGUI.h)
  ADD_EXECUTABLE(WhiteStripeGUI ${WhiteStripeGUISrc} ${WhiteStripeGUIIncludes} ${MOCSrcs})
  TARGET_LINK_LIBRARIES(WhiteStripeGUI QVTK ${VTK_LIBRARIES} ${ITK_LIBRARIES} ${OpenCV_LIBS})
INSTALL( TARGETS WhiteStripeGUI 
  DESTINATION bin  
  CONFIGURATIONS "${CMAKE_CONFIGURATION_TYPES}"
  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)
ENDIF ()

