PROJECT(CaPTk_IO)

#SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY 
#	${CaPTk_BINARY_DIR})
  
SET( ${PROJECT_NAME}_HDRS
  ${PROJECT_SOURCE_DIR}/inc/DicomSeriesReader.h
  ${PROJECT_SOURCE_DIR}/inc/DicomMetadataReader.h
)

SET( ${PROJECT_NAME}_SRCS
  ${PROJECT_SOURCE_DIR}/src/DicomSeriesReader.cpp
  ${PROJECT_SOURCE_DIR}/src/DicomMetadataReader.cpp
)

INCLUDE_DIRECTORIES( 
${CMAKE_CURRENT_SOURCE_DIR}/inc
)

IF(NOT (TARGET CaPTk_IO))
  
  ADD_LIBRARY(
    ${PROJECT_NAME}
    ${${PROJECT_NAME}_SRCS}
    ${${PROJECT_NAME}_HDRS}
  )

ENDIF()
