PROJECT(CaPTk_IO)

#SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY 
#	${CaPTk_BINARY_DIR})
  
SET( ${PROJECT_NAME}_HDRS
  ${PROJECT_SOURCE_DIR}/inc/DicomSeriesReader.h
  ${PROJECT_SOURCE_DIR}/inc/DicomMetadataReader.h
)

SET( ${PROJECT_NAME}_SRCS
  ${PROJECT_SOURCE_DIR}/src/DicomSeriesReader.cpp
  ${PROJECT_SOURCE_DIR}/src/DicomMetadataReader.cpp
)

INCLUDE_DIRECTORIES(  ${CMAKE_CURRENT_SOURCE_DIR}/inc )

SET( CACHED_INCLUDE_DIRS 
  ${CACHED_INCLUDE_DIRS}
  ${CMAKE_CURRENT_SOURCE_DIR}/inc
  CACHE STRING "All include directories" FORCE
)
  
IF(NOT (TARGET CaPTk_IO))
  
  ADD_LIBRARY(
    ${PROJECT_NAME}
    ${${PROJECT_NAME}_SRCS}
    ${${PROJECT_NAME}_HDRS}
  )

  TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${ITK_LIBRARIES} )
  
ENDIF()
